# beaker-cli

./: .gitignore  .gitmodules  Cargo.toml  ChangeLog.md  Makefile  README.md  beaker-cli.cabal  evm-mod.cabal  stack.yaml
.circleci/: config.yml
app/: Commands.hs  Main.hs
app/Commands/: Deploy.hs  Status.hs
beaker-haskell/: beaker-cli.cabal  stack.yaml
beaker-haskell/Kernel.bin/: Factory.bin-runtime  Factory.evm  Kernel.bin-runtime  Kernel.evm  Kernel.json  ProcedureTable.bin-runtime  ProcedureTable.evm  WhatIsMyAddress.bin-runtime  WhatIsMyAddress.evm
beaker-haskell/app/: Commands.hs  Main.hs
beaker-haskell/app/Commands/: Deploy.hs  Status.hs
beaker-haskell/ostest/: OSMain.hs
beaker-haskell/src/: CompileSolidity.hs  Process.hs
beaker-haskell/src/Check/: BeakerCompliance.hs  JumpTable.hs  Stores.hs
beaker-haskell/src/OpCode/: Utils.hs
beaker-haskell/test/Models/: Adder.binrun  Adder.hexbinbuild  Adder.hexbinrun
beaker-haskell/test/Tests/: Transform.hs  Utils.hs
beaker-haskell/test/Tests/Transform/: AdderOnChainProtected.hs  AdderOnChainUnprotected.hs  StoreAndGetOnChainProtectedOutOfBounds.hs
beaker-wrapper/: Cargo.toml
beaker-wrapper/src/: deploy.rs  main.rs
beaker-wrapper/tests/: integration.rs
ostest/: OSMain.hs
src/: Process.hs  Utils.hs
src/Check/: BeakerCompliance.hs  JumpTable.hs  Stores.hs
src/OpCode/: Exporter.hs  Parser.hs  StructureParser.hs  Type.hs
test/: Main.hs
test/Tests/: Analyse.hs  HandleOpCodes.hs  Utils.hs
test/Tests/Transform/: StoreAndGetOnChainProtectedInBounds.hs  StoreAndGetOnChainUnprotectedInBounds.hs
