name:           beaker-cli
version:        0.1.0.0
description:    EVM bytecode parser and modifier
author:         Daolab
maintainer:     joshannessy@gmail.com
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md
data-files:
    Kernel.bin/Kernel.bin,
    test/Models/Adder.hexbinbuild

source-repository head
  type: git
  location: https://github.com/daolab/beaker-cli

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
      , attoparsec
      , base16-bytestring
      , binary
      , bytestring
      , containers
      , cryptonite
      , directory
      , filepath
      , memory
      , optparse-applicative
      , parsec
      , process
      , QuickCheck
      , temporary
      , text
      , web3
  exposed-modules:
      CompileSolidity,
      OpCode.Exporter,
      OpCode.Parser,
      OpCode.StructureParser,
      OpCode.Type,
      OpCode.Utils,
      Check.BeakerCompliance,
      Check.Stores,
      Check.JumpTable,
      Process,
      Utils
  other-modules:
      Paths_beaker_cli
  default-language: Haskell2010
  ghc-options:
    -Wall
    -- enable -Werror for throwing errors on warnings. Should be enabled
    -- for production builds.
    -- -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures

executable beaker
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wall
    -- enable -Werror for throwing errors on warnings. Should be enabled
    -- for production builds.
    -- -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-unused-binds
  build-depends:
      base >=4.7 && <5
    , beaker-cli
    , base16-bytestring
    , bytestring
    , attoparsec
    , optparse-applicative
    , text
    , web3
  other-modules: Paths_beaker_cli
    , Types
    , Commands
    , Commands.Deploy
    , Commands.Status
  default-language: Haskell2010

test-suite beaker-cli-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , attoparsec
    , beaker-cli
    , base16-bytestring
    , bytestring
    , containers
    , directory
    , filepath
    , parsec
    , process
    , temporary
    , text
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , web3
  other-modules:
      Paths_beaker_cli,
      Models.HandWritten,
      Tests.HandleOpCodes,
      Tests.Transform,
      Tests.Transform.AdderOnChainProtected,
      Tests.Transform.AdderOnChainUnprotected,
      Tests.Transform.StoreAndGetOnChainProtectedInBounds,
      Tests.Transform.StoreAndGetOnChainProtectedOutOfBounds,
      Tests.Transform.StoreAndGetOnChainUnprotectedInBounds,
      Tests.Analyse,
      Tests.Utils
  default-language: Haskell2010

test-suite os-tests
  type: exitcode-stdio-1.0
  main-is: OSMain.hs
  hs-source-dirs:
      ostest, test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , attoparsec
    , beaker-cli
    , base16-bytestring
    , bytestring
    , containers
    , directory
    , filepath
    , parsec
    , process
    , temporary
    , text
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , web3
  other-modules:
      Paths_beaker_cli,
      Models.HandWritten,
      Tests.HandleOpCodes,
      Tests.Transform,
      Tests.Transform.AdderOnChainProtected,
      Tests.Transform.AdderOnChainUnprotected,
      Tests.Transform.StoreAndGetOnChainProtectedInBounds,
      Tests.Transform.StoreAndGetOnChainProtectedOutOfBounds,
      Tests.Transform.StoreAndGetOnChainUnprotectedInBounds,
      Tests.Analyse,
      Tests.Utils
  default-language: Haskell2010
