name:           evm-mod
version:        0.1.0.0
description:    EVM bytecode parser and modifier
author:         Daolab
maintainer:     joshannessy@gmail.com
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

-- source-repository head
--   type: git
--   location: https://github.com/daolab/evm-mod

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
      , attoparsec
      , base16-bytestring
      , binary
      , bytestring
      , containers
      , cryptonite
      , memory
      , parsec
      , QuickCheck
      , optparse-applicative
  exposed-modules:
      OpCode.Exporter,
      OpCode.Parser,
      OpCode.StructureParser,
      OpCode.Type,
      OpCode.Utils,
      Check.BeakerCompliance,
      Check.Stores,
      Check.JumpTable,
      Process
  other-modules:
      Paths_evm_mod
  default-language: Haskell2010

executable beaker
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
    -Wall
    -- enable -Werror for throwing errors on warnings. Should be enabled
    -- for production builds.
    -- -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-unused-binds
    -fno-warn-unused-do-bind
    -fno-warn-incomplete-patterns
  build-depends:
      base >=4.7 && <5
    , evm-mod
    , base16-bytestring
    , bytestring
    , attoparsec
    , optparse-applicative
    , text
  other-modules: Paths_evm_mod
    , Types
    , Commands
  default-language: Haskell2010

test-suite evm-mod-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , attoparsec
    , evm-mod
    , base16-bytestring
    , bytestring
    , containers
    , directory
    , filepath
    , parsec
    , process
    , temporary
    , text
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , web3
  other-modules:
      Paths_evm_mod,
      CompileSolidity,
      Models.HandWritten,
      Tests.HandleOpCodes,
      Tests.Transform,
      Tests.Transform.AdderOnChainProtected,
      Tests.Transform.AdderOnChainUnprotected,
      Tests.Transform.StoreAndGetOnChainProtectedInBounds,
      Tests.Transform.StoreAndGetOnChainProtectedOutOfBounds,
      Tests.Transform.StoreAndGetOnChainUnprotectedInBounds,
      Tests.Analyse,
      Tests.Utils
  default-language: Haskell2010

test-suite os-tests
  type: exitcode-stdio-1.0
  main-is: OSMain.hs
  hs-source-dirs:
      ostest, test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , attoparsec
    , evm-mod
    , base16-bytestring
    , bytestring
    , containers
    , directory
    , filepath
    , parsec
    , process
    , temporary
    , text
    , HUnit
    , QuickCheck
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , web3
  other-modules:
      Paths_evm_mod,
      CompileSolidity,
      Models.HandWritten,
      Tests.HandleOpCodes,
      Tests.Transform,
      Tests.Transform.AdderOnChainProtected,
      Tests.Transform.AdderOnChainUnprotected,
      Tests.Transform.StoreAndGetOnChainProtectedInBounds,
      Tests.Transform.StoreAndGetOnChainProtectedOutOfBounds,
      Tests.Transform.StoreAndGetOnChainUnprotectedInBounds,
      Tests.Analyse,
      Tests.Utils
  default-language: Haskell2010
