[package]
name = "beaker-wrapper"
version = "0.2.0"
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]

[dependencies]
clap = "~2.32.0"
web3 = { git = "https://github.com/Daolab/rust-web3", rev = "eda5d97db3133dabba9358fa9d34eef27a0a44c2" }
# web3 = { path = "../../rust-web3" }
rustc-hex = "2.0.1"
ethabi = "6.0.1"

[dev-dependencies]
assert_cli = "~0.6.3"
